feat: adding a disappearing element

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "linebreak-style": "off",
     "react/react-in-jsx-scope": "off"
   },
+  "import/prefer-default-export": 0,
   "settings": {
     "import/resolver": {
       "node": {
