--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "embla-carousel-react": "^8.0.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
